--- a/app/globals.css
+++ b/app/globals.css
@@ -3,25 +3,28 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --bgColor: #f2efe9;
+  --bgMode: #fff;
+  --bgCategory: #f2efe9;
+  --softBg: #e6e6e6;
+  --textColor: #333e48;
+  --secondText: #333e48;
+  --softTextColor: #878787;
+  --bgHeader: #f2efe9;
+  --yellowColor: #fed700;
+  --priceSaleColor: #dc3545;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.dark {
+  --bgColor: #181818;
+  --bgMode: #181818;
+  --bgCategory: #212121;
+  --textColor: #d9d9d9;
+  --softBg: #495057;
+  --softTextColor: #878787;
+  --secondText: #d9d9d9;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.flex-center {
+  @apply flex items-center;
 }
